<resources>
    <string name="app_name">Умная Копилка</string>
    <string name="enter_income">Зачислить</string>
    <string name="add_goal">Добавить цель</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="goal_name">Название цели</string>
    <string name="target_amount">Целевая сумма</string>
    <string name="priority">Приоритет</string>
    <string name="priority_high">Высокий</string>
    <string name="priority_medium">Средний</string>
    <string name="priority_low">Низкий</string>
    <string name="add_amount">Добавить сумму</string>
    <string name="amount">Сумма</string>
    <string name="add">Добавить</string>
    <string name="amount_added">Сумма добавлена</string>
    <string name="suggested_amount">Предложено: %s</string>
    <string name="remaining_amount">Осталось: %s</string>
    <string name="actual_amount">Фактическая сумма</string>
    <string name="expense_management">Управление тратами</string>
    <string name="monthly_income">Месячный доход</string>
    <string name="set_income">Установить доход</string>
    <string name="total_expenses">Общие траты в месяц:</string>
    <string name="savings_capacity">Возможность откладывать:</string>
    <string name="recommended_savings">Рекомендуемые накопления:</string>
    <string name="safe_savings">Безопасные накопления:</string>
    <string name="recalculate">Пересчитать</string>
    <string name="my_expenses">Мои траты</string>
    <string name="expense_name">Название траты</string>
    <string name="expense_type">Тип траты</string>
    <string name="daily">Ежедневная</string>
    <string name="weekly">Еженедельная</string>
    <string name="monthly">Ежемесячная</string>
    <string name="expenses">Траты</string>
    <string name="calculate">Рассчитать</string>
    <string name="calculation_results">Результаты расчета</string>
    <string name="no_data_message">Недостаточно данных для расчета</string>
    <string name="first_calculate_savings">Сначала рассчитайте возможность накоплений в разделе \'Траты\'</string>
</resources>